Neue Verzeichnisstruktur ins Hauptfile übernommen.

--- a/nf-anl2016.tex
+++ b/nf-anl2016.tex
@@ -49,8 +49,8 @@
 
 \input{utils/format.tex}
 
-  %\input{utils/disable-tutor.tex}
-  \input{utils/enable-tutor.tex}
+  \input{utils/disable-tutor.tex}
+  %\input{utils/enable-tutor.tex}
 
 \input{utils/tutor.tex}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -148,37 +148,35 @@ Tutorenversion}}
 \import{Versuch_0/}{Anleitung-0}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
-\import{Versuch_17-18/}{Anleitung-17}	% Solarzelle und Hlableiterdiode
-%\include{Versuch_17-18/Versuch-18}	% Transistor
-\import{Versuch_1-2/}{Anleitung-1}			% Stoß
+\import{Versuch_1-2n/}{Anleitung-1}			% Solarzelle und Hlableiterdiode
+\import{Versuch_1-2n/}{Anleitung-2}			% Stoß
 
-\import{Versuch_15-16/}{Anleitung-15}	% Wechselstrom und RC Kreis
-\import{Versuch_15-16/}{Anleitung-16}	% Spule und Transformator
+\import{Versuch_3-4n/}{Anleitung-3}			% Wechselstrom und RC Kreis
+\import{Versuch_3-4n/}{Anleitung-4}			% Spule und Transformator
 
-\import{Versuch_neu_1-2/}{Anleitung_Neu-1}	% Pohl'scher Resonator
-\import{Versuch_1-2/}{Anleitung-2}			% Drehschwingungen --> Trägheitsmoment
+\import{Versuch_5-6n/}{Anleitung-5}			% Pohl'scher Resonator
+\import{Versuch_5-6n/}{Anleitung-6}			% Drehschwingungen --> Trägheitsmoment
 
-\import{Versuch_3-4/}{Anleitung-3}			% Kapillarität und Auftrieb
-\import{Versuch_3-4/}{Anleitung-4}			% Innere Reibung von Flüssigkeiten
+\import{Versuch_7-8n/}{Anleitung-7}			% Kapillarität und Auftrieb
+\import{Versuch_7-8n/}{Anleitung-8}			% Innere Reibung von Flüssigkeiten
 
-\import{Versuch_7-8/}{Anleitung-7}			% Linsengesetze
-\import{Versuch_7-8/}{Anleitung-8}			% Mikroskop
+\import{Versuch_9-10n/}{Anleitung-9}		% Linsengesetze
+\import{Versuch_9-10n/}{Anleitung-10}		% Mikroskop
 
-\import{Versuch_9-10/}{Anleitung-9}		% Brechungsindex von Glas
-\import{Versuch_9-10/}{Anleitung-10}		% Beugung am Gitter
+\import{Versuch_11-12n/}{Anleitung-11}	% Brechungsindex von Glas
+\import{Versuch_11-12n/}{Anleitung-12}	% Beugung am Gitter
 
-\import{Versuch_11-12/}{Anleitung-11}	% Thermoelement
-%\include{Versuch_11-12/Versuch-12}	% Kennlinien verschiedener Leiter
-\import{Versuch_neu_1-2/}{Anleitung_Neu-2}	% Ultraschall
+\import{Versuch_13-14n/}{Anleitung-13}	% Thermoelement
+\import{Versuch_13-14n/}{Anleitung-14}	% Ultraschall
 
-\import{Versuch_13-14/}{Anleitung-13}	% Elektrische Netzwerke
-\import{Versuch_13-14/}{Anleitung-14} 	% Nichtstationäre Diffusion
+\import{Versuch_15-16n/}{Anleitung-15}	% Elektrische Netzwerke
+\import{Versuch_15-16n/}{Anleitung-16} 	% Nichtstationäre Diffusion
 
-\import{Versuch_19-20/}{Anleitung-19}	% Künstliche Radioaktivität
-\import{Versuch_19-20/}{Anleitung-20}	% Spezifische Elektronenladung e/m
+\import{Versuch_17-18n/}{Anleitung-17}	% Künstliche Radioaktivität
+\import{Versuch_17-18n/}{Anleitung-18}	% Spezifische Elektronenladung e/m
 
-\import{Versuch_5-6/}{Anleitung-5}			% Spezifische Wärmekapazität
-\import{Versuch_5-6/}{Anleitung-6}			% Molare Wärmekapazität von Luft
+\import{Versuch_19-20n/}{Anleitung-19}	% Spezifische Wärmekapazität
+\import{Versuch_19-20n/}{Anleitung-20}	% Molare Wärmekapazität von Luft
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
