Kurzer Hinweis an den Kapitelanfang auf das neue Fehlerrechnungskapitel.

--- a/00_einl/fehlerr.tex
+++ b/00_einl/fehlerr.tex
@@ -1,5 +1,8 @@
 \chapter{Fehlerrechnung und Auswertungen im Praktikum} \label{v:fehler}
 
+Dieses Kapitel ist aus dem Skript des Grundpraktikums für Physiker übernommen. Der Inhalt sollte derselbe sein, wie in Kapitel \ref{v:fehlerJW}, die Formulierungen sind aber etwas präziser und mathematischer gehalten.\\
+Wenn Sie mit dem vorherigen Kapitel zur Fehlerrechnung nichts anfangen konnten, schauen Sie sich doch alternativ mal dieses hier an.
+
 \section{Allgemeines}
 
 Dieser Abschnitt m"usste eigentlich richtiger hei"sen: "`Rechnen mit
