Versuchsreihenfolge korrigiert und zusätzliche Hinweise zum Osziversuch.

--- a/Versuch_13-14n/Anleitung-14.tex
+++ b/Versuch_13-14n/Anleitung-14.tex
@@ -199,6 +199,11 @@ In der Menüleiste des Programms auf die volle Zeitachse stellen (der Knopf nebe
 	\end{center}
 \end{figure}
 
+\begin{hint}
+	Ab und zu kommt es zu Störungen in der USB-Verbindung zwischen dem PC und dem Ultraschall-Betriebsgerät. In dem Fall führt zum Beispiel eine Erhöhung der Sendeleistung oder der Verstärkung des Empfängers NICHT zu einer höheren Amplitude des am PC dargestellten Signals.\\
+	Beenden Sie das Programm \verb AScan und schalten Sie das Betriebsgerät aus. Ziehen Sie den USB-Stecker raus und stecken ihn nach ein paar Sekunden wieder ein. Wenn Sie jetzt \verb AScan wieder starten, sollte die Kommunikation wieder funktionieren.
+\end{hint}
+
 \subsection{Durchführung}
 
 \begin{enumerate}
