--- a/Versuch_3-4n/Anleitung-3.tex
+++ b/Versuch_3-4n/Anleitung-3.tex
@@ -338,7 +338,7 @@ Eine Teilspannung ist proportional dem Teilwiderstand, über dem sie abgegriffen
 		\label{fig:Schaltung}
 	\end{figure}
 	
- \item Verbinden Sie das Netzteil mit dem Eingang des Frequenzgenerators. \\
+ \item Verbinden Sie das Netzteil mit dem Eingang des Frequenzgenerators. Stellen Sie dabei sicher, dass die Ausgangsspannung des Netzteils eine Amplitude von 24~V hat.\\
 	\begin{minipage}{0.45\textwidth}
 		Verbinden Sie das Oszilloskop mit dem Ausgang des Frequenzgenerators. Die Ausgangsspannung des Frequenzgenerators wird auf dem Bildschirm dargestellt (siehe Abbildung \ref{fig:Schaltung}). Messen Sie die Maximalamplitude 
 		$U_0$ sowie die Schwingungsdauer und die Frequenz des Ausgangssignals. Schätzen Sie jeweils Ihre Ablesefehler ab.
@@ -351,6 +351,8 @@ Eine Teilspannung ist proportional dem Teilwiderstand, über dem sie abgegriffen
 			\label{fig:Oszi}
 	\end{minipage}
  %
+ \etutorhint{Das Ausgangssignal des Funktionsgenerators sollte Rechteck-förmig sein und eine Frequenz von etwa 10~kHz haben. Wenn die Praktikanten das Signal nicht finden können, bitte zunächst die Zeitbasis des Oszilloskops überprüfen.}
+%
  \etutorhint{Nur eine Erdverbindung zwischen Oszi und Frequenzgenerator nötig, da die Außenleiter der beiden Kanäle des Oszilloskops miteinander verbunden sind.}
  %
 \begin{hint}
