--- a/Versuch_13-14n/Anleitung-14.tex
+++ b/Versuch_13-14n/Anleitung-14.tex
@@ -17,7 +17,7 @@ Gehrtsen, Kapitel 3.4, 4.2.1-3; Demtröder, Kapitel 11.9
 \section{Anwendungsbeispiele}
 %------------------------------------------------
 %
-Elastische Wellen mit Frequenzen oberhalb der menschlischen Hörschwelle (15 bis 20~kHz) bis etwa 10~GHz nennt man \textit{Ultraschall}. Bei großen Frequenzen liegen die Wellenlängen im selben Bereich wie die von sichtbaren Licht, weshalb Beugungserscheinungen, die die Ausbreitung des hörbaren Schalls so komplizieren, an Bedeutung verlieren. Das Schallfeld kann sehr gut fokussiert werden und kann so zur Ortung und Hinderniserkennung durch Richtstrahlreflexion genutzt werden (z. Bsp. Sonar in der Schifffahrt, bei Fledermäusen und Delphinen). \\
+Elastische Wellen mit Frequenzen oberhalb der menschlichen Hörschwelle (15 bis 20~kHz) bis etwa 10~GHz nennt man \textit{Ultraschall}. Bei großen Frequenzen liegen die Wellenlängen im selben Bereich wie die von sichtbaren Licht, weshalb Beugungserscheinungen, die die Ausbreitung des hörbaren Schalls so komplizieren, an Bedeutung verlieren. Das Schallfeld kann sehr gut fokussiert werden und kann so zur Ortung und Hinderniserkennung durch Richtstrahlreflexion genutzt werden (z. Bsp. Sonar in der Schifffahrt, bei Fledermäusen und Delphinen). \\
 In Materialien mit einfachem Molekülaufbau, z. Bsp. in Metallen ist die Absorption von Ultraschall sehr gering. Daher und wegen seiner Ungefährlichkeit im Vergleich mit anderen Strahlungsarten (Röntgen, hartes UV-Licht, Neutronen), wird Ultraschall in vielen Bereichen benutzt: Ultraschallechografie in Medizin, Werkstoffprüfung, Dickenmessung, externe Messung des Füllstandes von Tanks, Konzentrationsmessung in Lösungen. Die Untersuchung der Ausbreitung von longitudinalen und transversalen Erdbebenwellen erlaubt detaillierte Untersuchungen der Erdkruste, erbrachte die ersten Hinweise auf die flüssige Natur des Erdmantels und erlaubt die Triangulation der Epizentren von Erdbeben.
 %
 %------------------------------------------------
