Auswertung Versuch 3 überarbeitet

--- a/Versuch_3-4n/Auswertung-3.tex
+++ b/Versuch_3-4n/Auswertung-3.tex
@@ -139,4 +139,6 @@ mit $\sigma_m=20\,$kHz und $\sigma_R=0,03\,k\Omega$. Mit Gleichung (4) ergibt si
     \caption*{Bild 3: \small Spannung an der Spule aufgetragen gegen die Zeit (Blau) bei anliegender Rechteckspannung (Orange)}
 \end{figure}
 Wie in Bild 3 zu sehen ist setzt die Spannung an der Spule anfangs zusammen mit der Spannung an Widerstand und Spule plötzlich ein, doch während die Spannung an Widerstand und Spule (Orange) dort bleibt sinkt die Spannung an der Spule (Blau) exponentiell. Also wenn sich die Spannung an Widerstand und Spule nicht ändert so bildet die Spule einen Kurzschluss und es liegt keine Spannung mehr an ihr an. Wenn sich aber die Spannung schnell ändert so liegt annährend die selbe Spannung an der Spule an wie an dem Widerstand und Spule. Also bildet die Spule bei langsamen Änderungen der Spannung, also tiefen Frequenzen einen Kurzschluss und es liegt kaum Spannung an der Spule an und bei schnellen Änderungen der Spannung, also hohen Frequenzen, liegt an der Spule fast die selbe Spannung an und die Frequenz kommt durch. Aus diesem Grund nennt man den R-L-Kreis auch Hochpass, weil hohe Frequenzen passieren können und tiefe Frequenzen nicht.
-\end{document}
+
+
+\includepdf[pages=-]{Versuch3-Anhang-gedreht.pdf}
