Neue Schaltskizze für beleuchtete Solarzelle, in Arbeit

--- a/Versuch_1-2n/Anleitung-1.tex
+++ b/Versuch_1-2n/Anleitung-1.tex
@@ -232,8 +232,9 @@ Im Versuch wird ein in aus 19 Einzelelementen geschaltetes Solarmodul verwendet.
 		Ersetzen Sie das Netzgerät durch den regelbaren Lastwiderstand und entfernen Sie den Filter. Messen Sie die Kennlinie erneut.
 	\end{minipage}
 	\begin{minipage}{0.4\textwidth}
-				\includegraphics[width=1.00\textwidth]{Abbildungen/solarzelle.jpg}
-				\label{fig:solarzelle }
+%		\includegraphics[width=1.00\textwidth]{Abbildungen/solarzelle.jpg}
+		\input{Abbildungen/Solarzelle_beleuchtet_tikz.tex}
+		\label{fig:solarzelle }
 		\end{minipage}
 	%
 	\item \textbf{Die Kennlinien einer spektral gefiltert beleuchteten Solarzelle:}\\
