--- a/Versuch_1-2n/Abbildungen/Solarzelle_beleuchtet_tikz.tex
+++ b/Versuch_1-2n/Abbildungen/Solarzelle_beleuchtet_tikz.tex
@@ -3,8 +3,18 @@
 		\draw (0,2)
 		to [diode=light dependent] (0,0)
 		to [short, -*] (2,0) coordinate (A) %gefüllten Punkt hinzufügen
-		to [voltmeter] (2,2)
+		to [voltmeter, color=white, name=M] (2,2)
 		to [short, *-] (0,2);
+	\mymeter{M}{0}
+		\draw (2,2)
+		to [ammeter] (4,2)
+		to [short] (4,0)
+		to [short] (2,0);
+		%
+		\draw (6,0)
+		to [V=12V] (6,2)
+		to [short] (5,2)
+		to [resistor=8<\kilo\ohm>]
 	\end{scope}
 \end{circuitikz}
 
