Kleine Änderungen an Oszi-Beschreibung und tikz Makros

--- a/Versuch_3-4n/Anleitung-3.tex
+++ b/Versuch_3-4n/Anleitung-3.tex
@@ -42,35 +42,10 @@ Eine Zellmembran mit geringer Leitfähigkeit als Grenzschicht zwischen gut leite
 	\label{fig:TDS2000}
 \end{figure}
 
-%Das Oszilloskop ist das vielseitigste Messgerät im Bereich der Elektrik und Elektronik. Es dient der Beobachtung und Messung zeitabhängiger, schneller und wiederkehrender elektrischer Signale. Bis vor einigen Jahren waren noch hauptsächlich analoge Elektronenstrahl-Oszilloskope im Einsatz, die inzwischen jedoch weitestgehend von Digital-Speicher-Oszilloskopen verdrängt wurden. Dennoch wollen wir mit einer kurzen Beschreibung der Funktionsweise des Elektronenstrahl-Oszilloskops beginnen, diese viele grundlegende Funktionen des Oszilloskops anschaulich erklärt.
-%
-%\begin{figure}[h!]
-	%\centering
-		%\includegraphics[width=0.5\textwidth]{Versuch_15-16/Abbildungen/Elektronenstrahlroehre.jpg}
-	%\caption{Aufbau der Elektronenstrahlröhre des Oszilloskops.}
-	%\label{fig:Elektronenstrahlroehre}
-%\end{figure}
-%
-%Kernstück eines Oszilloskops ist eine Elektronenstrahlröhre, die einen Strahl beschleunigter Elektronen als quasi trägheitslosen Zeiger auf einen szintillierenden Schirm schießt. Zur Auslenkung dieses Strahls in der vertikalen Y Richtung wird dabei die zu untersuchende Eingangsspannung an die Platten eines Ablenkkondensators gelegt, so dass die Elektronen im elektrischen Feld des Kondensators abgelenkt werden.\\
-%Um die zeitliche Abhängigkeit der Eingangsspannung darzustellen, wird eine linear steigende (Sägezahn-)Spannung (Kippspannung) an die horizontalen Ablenkplatten gelegt, sodass der Elektronenstrahl mit gleichbleibender Geschwindigkeit die X Achse überstreicht.\\
-%Verschieden schnelle Signale können über Änderungen der Frequenz der Sägezahnspannung dargestellt werden (Einstellknopf 'SEC/DIV', 2 in Abbildung \ref{fig:TDS2000}). Signale mit verschiedener Amplitude können durch Anpassung der Verstärkung der Eingangsspannung sichtbar gemacht werden (Einstellknopf 'VOLTS/DIV', 1 in Abbildung \ref{fig:TDS2000}).\\
-%Ein Trigger-Netzwerk sorgt dafür, dass die Zeitbasis immer in dem Moment ''angestoßen'' wird, in dem das Signal am Y-Eingang erscheint und damit Signal und Zeitbasis synchronisiert werden. Für ein wiederkehrendes Signal erhält man auf diese Weise ein stehendes Bild auf dem Bildschirm des Oszilloskops.\\
-%
-
-%
-%\noindent
-%Auf der Frontseite des hier benutzten TDS2001C Oszilloskops erkennt man 3 Bedienfelder:\\
-%Im linken Teil findet man die Einstellungen für die Verstärkung der Eingangssignale der beiden Kanäle (2), sowie die Knöpfe für die Kanalmenüs (1). Hier lässt sich die Einkopplung des Eingangssignals (DC), die Bandbreite des Kanals (Voll), sowie die Grob- bzw. Feineinstellung der Verstärkung einstellen. Des Weiteren findet man hier einen einstellbaren Verstärkungsfaktor für den Eingang (sollte 1X sein), sowie die Möglichkeit, das Eingangssignal zu invertieren (Aus).\\
-%Im mittleren Teil finden sich die Einstellungen für die Zeitachse, welche für alle Kanäle gleich ist. Hier können Sie die Vergrößerung der Zeitachse ('SEC/DIV', Drehknopf 2) einstellen, sowie die Zeitachse hin- und herbewegen. Dabei gibt der vertikale weiße Pfeil den Zeitpunkt an, an dem die Triggerbedingung erfüllt wurde.\\
-%Im rechten Teil können Sie den Spannungspegel einstellen, 
-%Rechts oben im Feld befinden sich der Einschaltknopf (1), die anderen Knöpfe bestimmen die Zeitablenkung des Oszilloskops, d.h. die x-Achse des Bildes und die sog. Triggerung, d.h. den Beginn der Ablenkung des Elektronenstrahls von links nach rechts.\\
-%Im unteren rechten Feld werden die zu untersuchenden Spannungen eingegeben. Dieses Gerät kann zwei Signale gleichzeitig anzeigen, daher sind viele Funktionen doppelt. Es regelt also die Y-Achse.\\
-%Im schmalen linken Feld unter dem Bildschirm gibt es die Helligkeits- (18) und Schärfe-regelung (20) des Bildes, sowie weitere Testfunktionen des Gerätes.
-
 Will man schnell laufende Vorgänge, z.B. Wechselspannungen oder Impulse, stetig messen und in Abhängigkeit von der Zeit registrieren, so verwendet man ein Oszilloskop. Dieses stellt Spannungen direkt als Funktion der Zeit dar und ermöglicht so die Beobachtung von Vorgängen mit hoher Frequenz.
 
   Meist benutzt man das Oszilloskop im sogenannten \textit{YT-Modus}, bei dem auf der horizontalen X-Achse des Displays die Zeit $t$ dargestellt wird. Die \textit{Zeitbasis}, d.h. die Skalierung der Zeitachse, kann durch den horizontalen Wahlschalter zwischen \unit{5}{\nano\second} pro Kästchen und \unit{50}{\second} pro Kästchen einstellen. 
-  Die K\"astchen werden am Oszilloskop als DIV (f\"ur Division) bezeichnet. 
+  Die Kästchen werden am Oszilloskop als DIV (für Division) bezeichnet. 
   Weitere Eigenschaften der Zeitachse können in dem Menü eingestellt werden, welches nach Drücken der 
   Taste HORIZ MENU angezeigt wird. Für die richtige Wahl der Zeitbasis sollten Sie sich klar machen, mit welcher Frequenz die Spannung am Eingang des Oszilloskops sich verändert.
 
@@ -80,16 +55,16 @@ Will man schnell laufende Vorgänge, z.B. Wechselspannungen oder Impulse, stetig
   Weitere Eigenschaften der Y-Achse können im sogenannten \textit{Kanalmenü} eingestellt werden, welches nach Drücken der Taste CH MENU für den entsprechenden Kanal angezeigt wird. Diese Eigenschaften können für die beiden Kanäle unabhängig von einander eingestellt werden. 
   \begin{itemize}
     \item KOPPLUNG: Es ist möglich, über eine zum Eingang in Reihe geschaltete Kapazität, den Gleichspannungsanteil der Eingangsspannung zu unterdrücken. Dies geschieht, wenn die Kopplung des Kanals auf AC gestellt wird. Dieser Modus ist nützlich, um Spannungsänderungen zu untersuchen und beschleunigt die Arbeit mit dem Oszilloskop erheblich,
-      falls der Gleichspannungsanteil tats\"achlich irrelevant ist.
+      falls der Gleichspannungsanteil tatsächlich irrelevant ist.
       \begin{hint}
         Während des Versuchs stellen Sie die Kopplung bitte auf DC.
       \end{hint}
 
-    \item BANDBREITE: Die Bandbreiteneinstellung bestimmt die frequenzabhängig Unterdrückung von Eingangssignalen. Wenn Sie Signale in der Gößenordnung MHz darstellen wollen, sollten Sie darauf achten, dass die Bandbreite auf den maximalen Wert für den Oszilloskoptyp eingestellt ist, da ansonsten die Signalform stark verzerrt dargestellt wird.
-    \item TASTKOPF: Die Tastköpfe, mit denen Sie Ihre Schaltung untersuchen, können die Eingangsspannung über einen einstellbaren Spannungsteiler um den Faktor 10 unterdrücken. Dies dient dazu, größere Spannungen auf dem Oszilloskop darstellen zu können, als man sicher an den Eingang anschliessen könnte ohne Bauteile im Oszilloskop zu zerstören. 
+    \item BANDBREITE: Die Bandbreiteneinstellung bestimmt die frequenzabhängig Unterdrückung von Eingangssignalen. Wenn Sie Signale in der Größenordnung MHz darstellen wollen, sollten Sie darauf achten, dass die Bandbreite auf den maximalen Wert für den Oszilloskoptyp eingestellt ist, da ansonsten die Signalform stark verzerrt dargestellt wird.
+    \item TASTKOPF: Die Tastköpfe, mit denen Sie Ihre Schaltung untersuchen, können die Eingangsspannung über einen einstellbaren Spannungsteiler um den Faktor 10 unterdrücken. Dies dient dazu, größere Spannungen auf dem Oszilloskop darstellen zu können, als man sicher an den Eingang anschließen könnte ohne Bauteile im Oszilloskop zu zerstören. 
     Stellen Sie sicher, dass die Unterdrückung des Tastkopfes und die im Kanalmenü eingestellte Unterdrückung übereinstimmen, da Sie ansonsten andere Spannungswerte am Oszilloskop ablesen, als wirklich in der Schaltung anliegen.
 			\begin{hint}
-				Im Versuch stellen Sie bitte sicher, dass keine Unterdrückung (1X) eingestellt ist.
+				Im Versuch stellen Sie bitte sicher, dass keine Unterdrückung (1X) eingestellt ist und dass Spannung gemessen wird und nicht Strom.
 			\end{hint}
     \item INVERTIERUNG: Hiermit können Sie anstelle der Spannung $U$ die invertierte Spannung $-U$ auf dem Oszilloskop darstellen. 
 			\begin{hint}
@@ -99,7 +74,7 @@ Will man schnell laufende Vorgänge, z.B. Wechselspannungen oder Impulse, stetig
 
   \paragraph{Trigger} 
   Das Oszilloskop stellt die Eingangsspannung auf dem Display dar, wenn die sogenannte \textit{Triggerbedingung} erfüllt ist. Diese stellt man im Trigger Menü ein, welches nach Drücken der Taste TRIG MENU angezeigt wird. 
-  Das Oszilloskop stellt mehrere verschiedene Arten von Triggerbedingungen zur Verfügung. So kann, unter anderem auf Pulse bestimmter Breite getriggert werden. Im Praktikum ist allerdings der meistbenutzte Triggertyp der sogenannte \textit{Flankentrigger}. Eine typische Triggerbedinung lautet: Triggere, wenn die Spannung am Kanal 1 einen Wert von \unit{0.1}{\volt} überschreitet.\\
+  Das Oszilloskop stellt mehrere verschiedene Arten von Triggerbedingungen zur Verfügung. So kann unter anderem auf Pulse bestimmter Breite getriggert werden. Im Praktikum ist allerdings der meistbenutzte Triggertyp der sogenannte \textit{Flankentrigger}. Eine typische Triggerbedinung lautet: Triggere, wenn die Spannung am Kanal 1 einen Wert von \unit{0.1}{\volt} überschreitet.\\
   Diese Bedingung besteht aus drei separat einstellbaren Teilen:
   \begin{enumerate}
     \item Die Triggerquelle, d.h. die Spannung welches Kanals soll betrachtet werden? Wird im Triggermenü über den Punkt QUELLE eingestellt.
@@ -108,10 +83,10 @@ Will man schnell laufende Vorgänge, z.B. Wechselspannungen oder Impulse, stetig
   \end{enumerate}
   Eine weitere wichtige Eigenschaft des Triggers ist der \textit{Triggermodus} (Triggermenü, Punkt MODUS):
   \begin{itemize}
-    \item Triggermodus AUTO: Das Display wird in regelmäßigen Abständen neu aufgebaut, unabhängig davon, ob die Triggerbedingung erfüllt ist. Dieser Modus eignet sich dafür, eine erste Vorstellung des Signals zu bekommen, w\"ahrend noch kein korrekter Trigger eingestellt ist.
+    \item Triggermodus AUTO: Das Display wird in regelmäßigen Abständen neu aufgebaut, unabhängig davon, ob die Triggerbedingung erfüllt ist. Dieser Modus eignet sich dafür, eine erste Vorstellung des Signals zu bekommen, während noch kein korrekter Trigger eingestellt ist.
     \item Triggermodus NORMAL: Das Display wird nur dann neu aufgebaut, wenn die Triggerbedingung erfüllt ist. Dieser Modus eignet sich, um schnelle Veränderungen der Eingangsspannung, wie zum Beispiel logische Signale, zu untersuchen.
-      Ist die Triggerbedingung in kurzen Abst\"anden verl\"asslich erf\"ullt,
-      verhalen sich NORMAL und AUTO identisch. Sie k\"onnen also h\"aufig im
+      Ist die Triggerbedingung in kurzen Abständen verlässlich erfüllt,
+      verhalten sich NORMAL und AUTO identisch. Sie können also häufig im
       Modus AUTO verbleiben und nur zu NORMAL wechseln, wenn zwischen
       zwei Triggern zu viel Zeit vergeht.
     \item
